// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course overview related work ref item test Grid item unpublished 1`] = `
<div
  className="lesson-overview-padded-container"
>
  <div
    className="nti-link-to-path"
    onClick={[Function]}
    to="#"
  >
    <div
      className="card"
    >
      <div
        className="content-link related-work-ref external"
        target="_blank"
      >
        <div
          className="file-type icon fallback www"
          style={Object {}}
        >
          <div
            className="external"
          />
        </div>
        <h5>
          work ref 1
        </h5>
        <div
          className="label"
        >
          By Ref Creator
        </div>
        <div
          className="description"
        >
          this is a test related work ref overview item
        </div>
        <ul
          className="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              className="nti-link-to-path comment-count"
              to="#"
            >
              View Comments
            </div>
          </li>
          <li>
            <div
              className="publish-state"
            >
              Draft
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test Grid item with 5 comments, completable, required 1`] = `
<div
  className="lesson-overview-padded-container"
>
  <div
    className="nti-link-to-path"
    onClick={[Function]}
    to="#"
  >
    <div
      className="card"
    >
      <div
        className="content-link related-work-ref external"
        target="_blank"
      >
        <div
          className="file-type icon fallback www"
          style={Object {}}
        >
          <div
            className="external"
          />
        </div>
        <h5>
          work ref 1
        </h5>
        <div
          className="label"
        >
          By Ref Creator
        </div>
        <div
          className="description"
        >
          this is a test related work ref overview item
        </div>
        <ul
          className="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              className="lesson-overview-item-required-label"
            >
              Required
            </div>
          </li>
          <li>
            <div
              className="nti-link-to-path comment-count"
              to="#"
            >
              5 Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test Grid item with no comments, completable, not required 1`] = `
<div
  className="lesson-overview-padded-container"
>
  <div
    className="nti-link-to-path"
    onClick={[Function]}
    to="#"
  >
    <div
      className="card"
    >
      <div
        className="content-link related-work-ref external"
        target="_blank"
      >
        <div
          className="file-type icon fallback www"
          style={Object {}}
        >
          <div
            className="external"
          />
        </div>
        <h5>
          work ref 1
        </h5>
        <div
          className="label"
        >
          By Ref Creator
        </div>
        <div
          className="description"
        >
          this is a test related work ref overview item
        </div>
        <ul
          className="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              className="nti-link-to-path comment-count"
              to="#"
            >
              View Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test Grid item with no comments, completable, requirement editable 1`] = `
<div
  className="lesson-overview-padded-container"
>
  <div
    className="nti-link-to-path"
    onClick={[Function]}
    to="#"
  >
    <div
      className="card"
    >
      <div
        className="content-link related-work-ref external"
        target="_blank"
      >
        <div
          className="file-type icon fallback www"
          style={Object {}}
        >
          <div
            className="external"
          />
        </div>
        <h5>
          work ref 1
        </h5>
        <div
          className="label"
        >
          By Ref Creator
        </div>
        <div
          className="description"
        >
          this is a test related work ref overview item
        </div>
        <ul
          className="nti-separated-inline-list extra-labels"
        >
          <li>
            <div
              aria-haspopup="dialog"
              className="flyout-trigger require-control-value require-control flyout-closed"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyPress={[Function]}
              tabIndex={0}
            >
              <span>
                Optional
              </span>
              <i
                className="icon-chevron-down"
              />
            </div>
          </li>
          <li>
            <div
              className="nti-link-to-path comment-count"
              to="#"
            >
              View Comments
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test List item unpublished 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        onClick={[Function]}
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-related-work-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="file-type icon fallback www lesson-overview-base-list-item-icon"
                style={Object {}}
              >
                <div
                  className="external"
                />
              </div>
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              work ref 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list"
              >
                <li>
                  By Ref Creator
                </li>
                <li>
                  <div
                    className="nti-link-to-path comment-count"
                    to="#"
                  >
                    View Comments
                  </div>
                </li>
                <li>
                  <div
                    className="publish-state"
                  >
                    Draft
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test List item with 5 comments, completable, required 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        onClick={[Function]}
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-related-work-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="file-type icon fallback www lesson-overview-base-list-item-icon"
                style={Object {}}
              >
                <div
                  className="external"
                />
              </div>
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              work ref 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list"
              >
                <li>
                  <div
                    className="lesson-overview-item-required-label"
                  >
                    Required
                  </div>
                </li>
                <li>
                  By Ref Creator
                </li>
                <li>
                  <div
                    className="nti-link-to-path comment-count"
                    to="#"
                  >
                    5 Comments
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test List item with no comments, completable, not required 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        onClick={[Function]}
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-related-work-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="file-type icon fallback www lesson-overview-base-list-item-icon"
                style={Object {}}
              >
                <div
                  className="external"
                />
              </div>
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              work ref 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list"
              >
                <li>
                  By Ref Creator
                </li>
                <li>
                  <div
                    className="nti-link-to-path comment-count"
                    to="#"
                  >
                    View Comments
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Course overview related work ref item test List item with no comments, completable, requirement editable 1`] = `
<div
  className="lesson-overview-padded-container lesson-overview-base-list-item-container"
>
  <div
    className="lesson-overview-base-list-item-table-row"
  >
    <div
      className="lesson-overview-base-list-item-table-info-cell"
    >
      <div
        className="nti-link-to-path lesson-overview-base-list-item-link"
        onClick={[Function]}
        to="#"
      >
        <div
          className="lesson-overview-base-list-item lesson-overview-related-work-list-item"
        >
          <div
            className="icon-container"
          >
            <div
              className="icon"
            >
              <div
                className="file-type icon fallback www lesson-overview-base-list-item-icon"
                style={Object {}}
              >
                <div
                  className="external"
                />
              </div>
            </div>
          </div>
          <div
            className="right"
          >
            <div
              className="title plain"
            >
              work ref 1
            </div>
            <div
              className="labels"
            >
              <ul
                className="nti-separated-inline-list"
              >
                <li>
                  <div
                    aria-haspopup="dialog"
                    className="flyout-trigger require-control-value require-control flyout-closed"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    tabIndex={0}
                  >
                    <span>
                      Optional
                    </span>
                    <i
                      className="icon-chevron-down"
                    />
                  </div>
                </li>
                <li>
                  By Ref Creator
                </li>
                <li>
                  <div
                    className="nti-link-to-path comment-count"
                    to="#"
                  >
                    View Comments
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
